--- a/app/views/photos/edit_form.html.erb
+++ b/app/views/photos/edit_form.html.erb
@@ -9,14 +9,14 @@
 
 <h1>Edit photo</h1>
 
-<form action="/update_photo/:id">
+<form action="/update_photo/<%=@photo.id%>">
   <div>
     <label for="photo_caption">Caption:</label>
-    <input id="photo_caption" type="text" name="the_caption" value= <%=@photo.caption%>>
+    <input id="photo_caption" type="text" name="the_caption" value= "<%= @photo.caption %>">
   </div>
   <div>
     <label for="photo_image_url">Image URL:</label>
-    <input id="photo_image_url" type="text" name="the_source" value= <%=@photo.source%>>
+    <input id="photo_image_url" type="text" name="the_source" value= "<%= @photo.source %>">
   </div>
   <div>
     <button>Update Photo</button>
